--- a/index.html
+++ b/index.html
@@ -21,40 +21,88 @@
   </head>
   <body>
     <div class="container">
+      <!-- navbar -->
       <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a href="" class="navbar-brand"
-            ><i class="fas fa-square"></i> <span id="brand"> Mayur Ade</span>
-            <span id="designation">/ Developer </span>
-          </a>
+        <a href="" class="navbar-brand"
+          ><i class="fas fa-square"></i> <span id="brand"> Mayur Ade</span>
+          <span id="designation" class="d-none d-sm-inline">/ DEVELOPER </span>
+        </a>
 
-          <!-- Toggle Button -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a href="" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="nav-link">Contact</a>
-              </li>
-            </ul>
-          </div>
+        <!-- Toggle Button -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a href="" class="nav-link">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">GALLERY</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">CONTACT</a>
+            </li>
+          </ul>
         </div>
       </nav>
+
+      <div class="intro">
+        <div class="container-fluid text-center">
+          <div class="row">
+            <div class="col-md-6 intro-left shadow-lg">
+              <div class="row">
+                <div class="col">
+                  <img
+                    src="images/display.jpg"
+                    class="display-pic rounded-circle"
+                    alt=""
+                  />
+                  <h1 id="name">Mayur <br />Ade</h1>
+                  <hr />
+                  <p id="work">
+                    <i class="fas fa-briefcase"></i> DEVELOPER | TCS
+                  </p>
+                </div>
+              </div>
+              <div class="row text-center connect-links">
+                <h3>
+                  <a
+                    href="https://www.facebook.com/mayur.ade.583/"
+                    target="_blank"
+                    ><i class="fab fa-facebook-f"></i
+                  ></a>
+                  <a
+                    href="https://www.linkedin.com/in/mayur-ade/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                  <a href=""><i class="fab fa-twitter"></i></a>
+                  <a
+                    href="https://www.instagram.com/mayur_ade_/"
+                    target="_blank"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
+                </h3>
+              </div>
+            </div>
+            <div class="col-md-6 intro-right shadow">
+              <h1>HELLO!</h1>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
