--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <div
+          class="collapse navbar-collapse text-center"
+          id="navbarTogglerDemo01"
+        >
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
               <a href="" class="nav-link">HOME</a>
@@ -61,11 +64,11 @@
       <div class="intro">
         <div class="container-fluid text-center">
           <div class="row">
-            <div class="col-md-6 intro-left shadow-lg">
-              <div class="row">
+            <div class="col-lg-6 intro-left shadow-lg">
+              <div class="row brief-intro">
                 <div class="col">
                   <img
-                    src="images/display.jpg"
+                    src="images/dp2.PNG"
                     class="display-pic rounded-circle"
                     alt=""
                   />
@@ -97,8 +100,29 @@
                 </h3>
               </div>
             </div>
-            <div class="col-md-6 intro-right shadow">
-              <h1>HELLO!</h1>
+            <div class="col-lg-6 intro-right shadow">
+              <h1 id="greet">Hi There!</h1>
+              <p>
+                I am looking for an opportunity in
+                <span id="titles"
+                  >software development / full stack development.</span
+                >
+              </p>
+              <p>
+                I appreciate the process that follows development roles, i.e
+                creating something from the ground up, and being a part of it
+                inspires me. It ensures that I improve as a person in tandem
+                with the product.
+              </p>
+              <p>
+                I'd like to work with a firm with a clear vision for what they
+                aim to accomplish with their products and as a company.
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1gZeaxWWoVPjLG17R9KP-ogas4ixYEUtq/view"
+                target="_blank"
+                ><button class="btn btn-default">Resume</button></a
+              >
             </div>
           </div>
         </div>
