--- a/index.html
+++ b/index.html
@@ -64,43 +64,55 @@
       <div class="intro">
         <div class="container-fluid text-center">
           <div class="row">
-            <div class="col-lg-6 intro-left shadow-lg">
+            <section class="col-lg-6 intro-left shadow-lg">
               <div class="row brief-intro">
                 <div class="col">
+                  <!-- Display picture -->
                   <img
                     src="images/dp2.PNG"
-                    class="display-pic rounded-circle"
+                    class="display-pic shadow-lg rounded-circle"
                     alt=""
                   />
-                  <h1 id="name">Mayur <br />Ade</h1>
+
+                  <h1 id="name">
+                    Mayur
+                    <br class="name-break" />
+                    Ade
+                  </h1>
                   <hr />
                   <p id="work">
                     <i class="fas fa-briefcase"></i> DEVELOPER | TCS
                   </p>
                 </div>
               </div>
+
+              <!-- Links to connect -->
               <div class="row text-center connect-links">
-                <h3>
-                  <a
-                    href="https://www.facebook.com/mayur.ade.583/"
-                    target="_blank"
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a
-                    href="https://www.linkedin.com/in/mayur-ade/"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                  <a href=""><i class="fab fa-twitter"></i></a>
-                  <a
-                    href="https://www.instagram.com/mayur_ade_/"
-                    target="_blank"
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </h3>
+                <!-- Links to connect -->
+                <div class="col col-links">
+                  <h3 class="">
+                    <a
+                      href="https://www.facebook.com/mayur.ade.583/"
+                      target="_blank"
+                      ><i class="fab fa-facebook-f"></i
+                    ></a>
+                    <a
+                      href="https://www.linkedin.com/in/mayur-ade/"
+                      target="_blank"
+                      ><i class="fab fa-linkedin-in"></i
+                    ></a>
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a
+                      href="https://www.instagram.com/mayur_ade_/"
+                      target="_blank"
+                      ><i class="fab fa-instagram"></i
+                    ></a>
+                  </h3>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-6 intro-right shadow">
+            </section>
+            <!-- Right content -->
+            <section class="col-lg-6 intro-right shadow">
               <h1 id="greet">Hi There!</h1>
               <p>
                 I am looking for an opportunity in
@@ -108,6 +120,7 @@
                   >software development / full stack development.</span
                 >
               </p>
+              <!-- <a href="" class="">Read More</a> -->
               <p>
                 I appreciate the process that follows development roles, i.e
                 creating something from the ground up, and being a part of it
@@ -123,11 +136,17 @@
                 target="_blank"
                 ><button class="btn btn-default">Resume</button></a
               >
-            </div>
+            </section>
           </div>
         </div>
       </div>
     </div>
+
+    <footer>
+      <p>Created by Mayur Ade</p>
+    </footer>
+
+    <!-- <div class="container-fluid footer"></div> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
