--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg navbar-light">
         <a href="" class="navbar-brand"
-          ><i class="fas fa-square"></i> <span id="brand"> Mayur Ade</span>
-          <span id="designation" class="d-none d-sm-inline">/ DEVELOPER </span>
+          ><i class="fas fa-square"></i> <span id="brand"> Mayur Ade </span>
+          <span id="designation" class="d-none d-sm-inline brand-role"
+            >/ DEVELOPER
+          </span>
         </a>
 
         <!-- Toggle Button -->
@@ -142,9 +144,7 @@
       </div>
     </div>
 
-    <footer>
-      <p>Created by Mayur Ade</p>
-    </footer>
+    <footer></footer>
 
     <!-- <div class="container-fluid footer"></div> -->
     <script
