--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               <a href="./about.html" class="nav-link">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">GALLERY</a>
+              <a href="" class="nav-link">PROJECTS</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link">CONTACT</a>
@@ -74,16 +74,175 @@
         <div class="date">
           <h4>2021 - Present</h4>
         </div>
-        <div class="job-desc">
-          <h3>Job Position</h3>
-          <h3>System Engineer TCS</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="job-desc">
+              <h3><b>JOB POSITION</b></h3>
+              <h3>System Engineer</h3>
+              <h3>TCS Pune</h3>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="desc_block">
+              <ul class="custom-li">
+                <li>
+                  Worked as an RSA Archer Developer for an investment banking
+                  company
+                </li>
+                <li>Created applications and solutions related to GRC</li>
+                <li>
+                  Worked as an offshore SOC Analyst of Cyber Security team
+                </li>
+                <li>
+                  Conduct proactive monitoring, investigation, and mitigation of
+                  security incidents
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="info">test</div>
-      <div class="info">test</div>
+      <!-- Internship -->
+      <div class="info shadow-lg">
+        <div class="date">
+          <h4>2020 - 2021</h4>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="job-desc">
+              <h3><b>POSITION</b></h3>
+              <h3>Project Intern</h3>
+              <h3 style="color: blue">ARAI Pune</h3>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="desc_block">
+              <ul class="custom-li">
+                <li>
+                  Worked as an RSA Archer Developer for an investment banking
+                  company
+                </li>
+                <li>Created applications and solutions related to GRC</li>
+                <li>
+                  Worked as an offshore SOC Analyst of Cyber Security team
+                </li>
+                <li>
+                  Conduct proactive monitoring, investigation, and mitigation of
+                  security incidents
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h3>EDUCATION</h3>
+      <div class="info shadow-lg">
+        <div class="date">
+          <h4>2016 - 2020</h4>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="job-desc">
+              <h3><b>P.E.S MODERN COLLEGE OF ENGINEERING</b> (SPPU)</h3>
+              <h4>B.E. MECHANICAL</h4>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="desc_block">
+              <ul class="custom-li">
+                <li>
+                  Completed my Undergraduation Degree in Mechanical Engineering
+                </li>
+                <li>
+                  Was a part of my college's Robotics team as a Cad designer and
+                  programmer
+                </li>
+                <li>
+                  Worked on projects in various domains such as robotics,
+                  automation, ML and automotive engineering.
+                </li>
+                <li>
+                  Conduct proactive monitoring, investigation, and mitigation of
+                  security incidents
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  Junior College -->
+      <div class="info shadow-lg">
+        <div class="date">
+          <h4>2016 - 2020</h4>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="job-desc">
+              <h3><b>St.Peter's Junior College</b></h3>
+              <h4>HSC</h4>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="desc_block">
+              <ul class="custom-li">
+                <li>
+                  Completed my Undergraduation Degree in Mechanical Engineering
+                </li>
+                <li>
+                  Was a part of my college's Robotics team as a Cad designer and
+                  programmer
+                </li>
+                <li>
+                  Worked on projects in various domains such as robotics,
+                  automation, ML and automotive engineering.
+                </li>
+                <li>
+                  Conduct proactive monitoring, investigation, and mitigation of
+                  security incidents
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="info">
+        <h2>Technical Skills</h2>
+        <div id="skills">
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> Python</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> Javascript</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> React</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> Node</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> Core Java</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> HTML</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> CSS</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> Bootstrap</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> C++</span
+          >
+          <span class="skill-label"
+            ><i class="fas fa-square square-bullet"></i> OOPs</span
+          >
+        </div>
+      </div>
+      <!-- <div class="info">test</div> -->
+      <footer id="footer"></footer>
     </div>
-
-    <footer></footer>
 
     <!-- <div class="container-fluid footer"></div> -->
     <script
