--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a href="./about.html" class="nav-link">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">GALLERY</a>
+              <a href="" class="nav-link">PROJECTS</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link">CONTACT</a>
