--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 inspires me. It ensures that I improve as a person in tandem
                 with the product.
               </p>
-              <p>
+              <p style="visibility:hidden">
                 I'd like to work with a firm with a clear vision for what they
                 aim to accomplish with their products and as a company.
               </p>
