drive link updated

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 aim to accomplish with their products and as a company.
               </p>
               <a
-                href="https://drive.google.com/file/d/1gZeaxWWoVPjLG17R9KP-ogas4ixYEUtq/view"
+                href="https://drive.google.com/file/d/1yEc3CvFqHbqVb_EzGCFS3a4dkFeVpGqT/view?usp=sharing"
                 target="_blank"
                 ><button class="btn btn-default">Resume</button></a
               >
